--- a/views/index.html
+++ b/views/index.html
@@ -26,7 +26,8 @@
     <!-- Adminux CSS -->
     <link rel="stylesheet" href="/assets/css\dark.css" type="text/css">
     <base href="/">
-<link rel="stylesheet" href="styles.42fe5cf496e3b39c7762.css"></head>
+    <link rel="stylesheet" href="styles.42fe5cf496e3b39c7762.css">
+</head>
 
 <body class="menuclose menuclose-right">
     <div class="loader_wrapper align-items-center text-center">
@@ -84,6 +85,14 @@
     <!-- custome template js
 <script src="/assets/js\dashboard1.js"></script>
  -->
-<script src="runtime-es2015.1eba213af0b233498d9d.js" type="module"></script><script src="runtime-es5.1eba213af0b233498d9d.js" nomodule defer></script><script src="polyfills-es5.854e27d5c3ee211e0428.js" nomodule defer></script><script src="polyfills-es2015.02e0adde506397c89d6d.js" type="module"></script><script src="vendor-es2015.138133077fe271856cb7.js" type="module"></script><script src="vendor-es5.138133077fe271856cb7.js" nomodule defer></script><script src="main-es2015.7e208d45c8a2b8411421.js" type="module"></script><script src="main-es5.7e208d45c8a2b8411421.js" nomodule defer></script></body>
+    <script src="runtime-es2015.7d2ad402b320d17dd964.js" type="module"></script>
+    <script src="runtime-es5.7d2ad402b320d17dd964.js" nomodule defer></script>
+    <script src="polyfills-es5.683b18748fdd57b0481c.js" nomodule defer></script>
+    <script src="polyfills-es2015.d6c42bbe6d056bce3112.js" type="module"></script>
+    <script src="vendor-es2015.23dedb89330d39503070.js" type="module"></script>
+    <script src="vendor-es5.23dedb89330d39503070.js" nomodule defer></script>
+    <script src="main-es2015.580d0b9180b3b3416daa.js" type="module"></script>
+    <script src="main-es5.580d0b9180b3b3416daa.js" nomodule defer></script>
+</body>
 
 </html>
