--- a/public/assets/css/dark.css
+++ b/public/assets/css/dark.css
@@ -2293,7 +2293,8 @@ header.navbar-fixed {
 .navbar-brand.imglogo {
     height: 42px;
     width: 166px;
-    background: url("../img/logo_header.png") no-repeat center left;
+    /*background: url("../img/logo_header.png") no-repeat center left;*/
+    background: url("../img/header_logo.png") no-repeat center left;
     background-size: auto 40px;
     margin-bottom: -5px;
     margin-top: -4px
